bug-fix : timeline , z-index

--- a/css/contents/view.css
+++ b/css/contents/view.css
@@ -33,6 +33,8 @@
 
 .contents [name='view'] .pic{
   position:absolute;
+  perspective: none;
+  transform-style: preserve-3d;
 }
 .contents [name='view'] .pic[data-status='active']{
   box-shadow:2px 2px 10px rgba(0,0,0,0.5);
